@@ -1,3 +1,8 @@
+2006-11-05  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimp-transform-region.c: applied patch from gg that
+	removes duplicated code (bug #358481).
+
 2006-11-04  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimprectangletool.c: merged all tool options notify
